--- a/src/components/WhatWeDo.css
+++ b/src/components/WhatWeDo.css
@@ -1,9 +1,9 @@
-.container {
-    width: 100%;
+/* .container {
+    width: 100%; //////
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
-  }
+  } */
   
   .content-box {
     /* background-color: #fff; */
